@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug 8143037 8142447 8144095 8140265 8144906 8146138 8147887 8147886 8148316 8148317 8143955 8157953 8080347
+ * @bug 8143037 8142447 8144095 8140265 8144906 8146138 8147887 8147886 8148316 8148317 8143955 8157953 8080347 8154714 8166649 8167643 8170162 8172102 8165405
  * @summary Tests for Basic tests for REPL tool
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
@@ -49,8 +49,6 @@ import java.util.Scanner;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.prefs.BackingStoreException;
-import java.util.prefs.Preferences;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -265,7 +263,8 @@ public class ToolBasicTest extends ReplToolTesting {
         compiler.compile(outDir, "package pkg; public class A { public String toString() { return \"A\"; } }");
         Path classpath = compiler.getPath(outDir);
         test(
-                (a) -> assertCommand(a, "/classpath " + classpath, String.format("|  Path '%s' added to classpath", classpath)),
+                (a) -> assertCommand(a, "/env --class-path " + classpath,
+                        "|  Setting new options and restoring state."),
                 (a) -> evaluateExpression(a, "pkg.A", "new pkg.A();", "A")
         );
         test(new String[] { "--class-path", classpath.toString() },
@@ -281,7 +280,8 @@ public class ToolBasicTest extends ReplToolTesting {
         compiler.jar(outDir, jarName, "pkg/A.class");
         Path jarPath = compiler.getPath(outDir).resolve(jarName);
         test(
-                (a) -> assertCommand(a, "/classpath " + jarPath, String.format("|  Path '%s' added to classpath", jarPath)),
+                (a) -> assertCommand(a, "/env --class-path " + jarPath,
+                        "|  Setting new options and restoring state."),
                 (a) -> evaluateExpression(a, "pkg.A", "new pkg.A();", "A")
         );
         test(new String[] { "--class-path", jarPath.toString() },
@@ -289,23 +289,34 @@ public class ToolBasicTest extends ReplToolTesting {
         );
     }
 
+    public void testModulePath() {
+        Compiler compiler = new Compiler();
+        Path modsDir = Paths.get("mods");
+        Path outDir = Paths.get("mods", "org.astro");
+        compiler.compile(outDir, "package org.astro; public class World { public static String name() { return \"world\"; } }");
+        compiler.compile(outDir, "module org.astro { exports org.astro; }");
+        Path modsPath = compiler.getPath(modsDir);
+        test(new String[] { "--module-path", modsPath.toString(), "--add-modules", "org.astro" },
+                (a) -> assertCommand(a, "import org.astro.World;", ""),
+                (a) -> evaluateExpression(a, "String",
+                        "String.format(\"Greetings %s!\", World.name());",
+                        "\"Greetings world!\"")
+        );
+    }
+
     public void testStartupFileOption() {
-        try {
-            Compiler compiler = new Compiler();
-            Path startup = compiler.getPath("StartupFileOption/startup.txt");
-            compiler.writeToFile(startup, "class A { public String toString() { return \"A\"; } }");
-            test(new String[]{"--startup", startup.toString()},
-                    (a) -> evaluateExpression(a, "A", "new A()", "A")
-            );
-            test(new String[]{"--no-startup"},
-                    (a) -> assertCommandCheckOutput(a, "printf(\"\")", assertStartsWith("|  Error:\n|  cannot find symbol"))
-            );
-            test(
-                    (a) -> assertCommand(a, "printf(\"A\")", "", "", null, "A", "")
-            );
-        } finally {
-            removeStartup();
-        }
+        Compiler compiler = new Compiler();
+        Path startup = compiler.getPath("StartupFileOption/startup.txt");
+        compiler.writeToFile(startup, "class A { public String toString() { return \"A\"; } }");
+        test(new String[]{"--startup", startup.toString()},
+                (a) -> evaluateExpression(a, "A", "new A()", "A")
+        );
+        test(new String[]{"--no-startup"},
+                (a) -> assertCommandCheckOutput(a, "Pattern.compile(\"x+\")", assertStartsWith("|  Error:\n|  cannot find symbol"))
+        );
+        test(
+                (a) -> assertCommand(a, "Pattern.compile(\"x+\")", "$1 ==> x+", "", null, "", "")
+        );
     }
 
     public void testLoadingFromArgs() {
@@ -376,6 +387,16 @@ public class ToolBasicTest extends ReplToolTesting {
         }
     }
 
+    public void testOpenResource() {
+        test(
+                (a) -> assertCommand(a, "/open PRINTING", ""),
+                (a) -> assertCommandOutputContains(a, "/list",
+                        "void println", "System.out.printf"),
+                (a) -> assertCommand(a, "printf(\"%4.2f\", Math.PI)",
+                        "", "", null, "3.14", "")
+        );
+    }
+
     public void testSave() throws IOException {
         Compiler compiler = new Compiler();
         Path path = compiler.getPath("testSave.repl");
@@ -421,45 +442,34 @@ public class ToolBasicTest extends ReplToolTesting {
         assertEquals(Files.readAllLines(path), output);
     }
 
-    public void testStartRetain() throws BackingStoreException {
-        try {
-            Compiler compiler = new Compiler();
-            Path startUpFile = compiler.getPath("startUp.txt");
-            test(
-                    (a) -> assertVariable(a, "int", "a"),
-                    (a) -> assertVariable(a, "double", "b", "10", "10.0"),
-                    (a) -> assertMethod(a, "void f() {}", "()V", "f"),
-                    (a) -> assertImport(a, "import java.util.stream.*;", "", "java.util.stream.*"),
-                    (a) -> assertCommand(a, "/save " + startUpFile.toString(), null),
-                    (a) -> assertCommand(a, "/retain start " + startUpFile.toString(), null)
-            );
-            Path unknown = compiler.getPath("UNKNOWN");
-            test(
-                    (a) -> assertCommandOutputStartsWith(a, "/retain start " + unknown.toString(),
-                            "|  File '" + unknown + "' for '/retain start' is not found.")
-            );
-            test(false, new String[0],
-                    (a) -> {
-                        loadVariable(a, "int", "a");
-                        loadVariable(a, "double", "b", "10.0", "10.0");
-                        loadMethod(a, "void f() {}", "()void", "f");
-                        loadImport(a, "import java.util.stream.*;", "", "java.util.stream.*");
-                        assertCommandCheckOutput(a, "/types", assertClasses());
-                    },
-                    (a) -> assertCommandCheckOutput(a, "/vars", assertVariables()),
-                    (a) -> assertCommandCheckOutput(a, "/methods", assertMethods()),
-                    (a) -> assertCommandCheckOutput(a, "/imports", assertImports())
-            );
-        } finally {
-            removeStartup();
-        }
-    }
-
-    private void removeStartup() {
-        Preferences preferences = Preferences.userRoot().node("tool/JShell");
-        if (preferences != null) {
-            preferences.remove("STARTUP");
-        }
+    public void testStartRetain() {
+        Compiler compiler = new Compiler();
+        Path startUpFile = compiler.getPath("startUp.txt");
+        test(
+                (a) -> assertVariable(a, "int", "a"),
+                (a) -> assertVariable(a, "double", "b", "10", "10.0"),
+                (a) -> assertMethod(a, "void f() {}", "()V", "f"),
+                (a) -> assertImport(a, "import java.util.stream.*;", "", "java.util.stream.*"),
+                (a) -> assertCommand(a, "/save " + startUpFile.toString(), null),
+                (a) -> assertCommand(a, "/set start -retain " + startUpFile.toString(), null)
+        );
+        Path unknown = compiler.getPath("UNKNOWN");
+        test(
+                (a) -> assertCommandOutputStartsWith(a, "/set start -retain " + unknown.toString(),
+                        "|  File '" + unknown + "' for '/set start' is not found.")
+        );
+        test(false, new String[0],
+                (a) -> {
+                    loadVariable(a, "int", "a");
+                    loadVariable(a, "double", "b", "10.0", "10.0");
+                    loadMethod(a, "void f() {}", "()void", "f");
+                    loadImport(a, "import java.util.stream.*;", "", "java.util.stream.*");
+                    assertCommandCheckOutput(a, "/types", assertClasses());
+                },
+                (a) -> assertCommandCheckOutput(a, "/vars", assertVariables()),
+                (a) -> assertCommandCheckOutput(a, "/methods", assertMethods()),
+                (a) -> assertCommandCheckOutput(a, "/imports", assertImports())
+        );
     }
 
     public void testStartSave() throws IOException {
@@ -505,7 +515,7 @@ public class ToolBasicTest extends ReplToolTesting {
                     a -> assertCommand(a, "int a", ""),
                     a -> assertCommand(a, "void f() {}", ""),
                     a -> assertCommandCheckOutput(a, "aaaa", assertStartsWith("|  Error:")),
-                    a -> assertCommandCheckOutput(a, "public void f() {}", assertStartsWith("|  Warning:"))
+                    a -> assertCommandCheckOutput(a, "static void f() {}", assertStartsWith("|  Warning:"))
             );
         }
     }
@@ -572,6 +582,22 @@ public class ToolBasicTest extends ReplToolTesting {
         } finally {
             System.setProperty("java.awt.headless", prevHeadless==null? "false" : prevHeadless);
         }
+    }
+
+    public void testAddExports() {
+        test(false, new String[]{"--no-startup"},
+                a -> assertCommandOutputStartsWith(a, "import jdk.internal.misc.VM;", "|  Error:")
+        );
+        test(false, new String[]{"--no-startup",
+            "-R--add-exports", "-Rjava.base/jdk.internal.misc=ALL-UNNAMED",
+            "-C--add-exports", "-Cjava.base/jdk.internal.misc=ALL-UNNAMED"},
+                a -> assertImport(a, "import jdk.internal.misc.VM;", "", "jdk.internal.misc.VM"),
+                a -> assertCommand(a, "System.err.println(VM.isBooted())", "", "", null, "", "true\n")
+        );
+        test(false, new String[]{"--no-startup", "--add-exports", "java.base/jdk.internal.misc"},
+                a -> assertImport(a, "import jdk.internal.misc.VM;", "", "jdk.internal.misc.VM"),
+                a -> assertCommand(a, "System.err.println(VM.isBooted())", "", "", null, "", "true\n")
+        );
     }
 
 }
